fix collapsing

--- a/styles/style.css
+++ b/styles/style.css
@@ -223,6 +223,10 @@
   line-height: 21px;
 }
 
+.card__text:not(:first-of-type)  {
+  margin-block-start: 0;
+}
+
 .card__text:last-of-type {
   margin-block-end: 0;
 }
